
include $(top_srcdir)/build/autotools/common.am

noinst_LIBRARIES = liblol-bullet.a

# Only remove flags that were actually set, because we don't know
# what the compiler actually accepts.
disable_cflags = $(filter $(AM_CPPFLAGS:-W%=-Wno-%), \
    -Wno-shadow -Wno-unused -Wno-cast-qual -Wno-strict-aliasing)

liblol_bullet_a_SOURCES = $(bullet_sources)
liblol_bullet_a_CPPFLAGS = -DB3_USE_CLEW $(AM_CPPFLAGS) -I$(srcdir) $(disable_cflags)

bullet_sources =

if FALSE #CONDITIONAL_BUILD_MULTITHREADED
libBulletMultiThreaded_la_CXXFLAGS = -I./BulletMultiThreaded/vectormath/scalar/cpp
bullet_sources +=
endif

bullet_sources += \
	Bullet3Collision/BroadPhaseCollision/b3BroadphaseCallback.h \
	Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.cpp \
	Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.h \
	Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.cpp \
	Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.h \
	Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.cpp \
	Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.h \
	Bullet3Collision/BroadPhaseCollision/b3OverlappingPair.h \
	Bullet3Collision/BroadPhaseCollision/shared/b3Aabb.h \
	Bullet3Collision/NarrowPhaseCollision/b3Config.h \
	Bullet3Collision/NarrowPhaseCollision/b3Contact4.h \
	Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.cpp \
	Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.h \
	Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.cpp \
	Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.h \
	Bullet3Collision/NarrowPhaseCollision/b3RaycastInfo.h \
	Bullet3Collision/NarrowPhaseCollision/b3RigidBodyCL.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3BvhSubtreeInfoData.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3BvhTraversal.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3ClipFaces.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3Collidable.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3Contact4Data.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3ContactConvexConvexSAT.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3ContactSphereSphere.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3ConvexPolyhedronData.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3FindConcaveSatAxis.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3FindSeparatingAxis.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3MprPenetration.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3NewContactReduction.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3QuantizedBvhNodeData.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3ReduceContacts.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3RigidBodyData.h \
	Bullet3Collision/NarrowPhaseCollision/shared/b3UpdateAabbs.h \
	$(NULL)

bullet_sources += \
	Bullet3Common/b3AlignedAllocator.cpp \
	Bullet3Common/b3AlignedAllocator.h \
	Bullet3Common/b3AlignedObjectArray.h \
	Bullet3Common/b3CommandLineArgs.h \
	Bullet3Common/b3FileUtils.h \
	Bullet3Common/b3HashMap.h \
	Bullet3Common/b3Logging.cpp \
	Bullet3Common/b3Logging.h \
	Bullet3Common/b3Matrix3x3.h \
	Bullet3Common/b3MinMax.h \
	Bullet3Common/b3PoolAllocator.h \
	Bullet3Common/b3QuadWord.h \
	Bullet3Common/b3Quaternion.h \
	Bullet3Common/b3Random.h \
	Bullet3Common/b3Scalar.h \
	Bullet3Common/b3StackAlloc.h \
	Bullet3Common/b3Transform.h \
	Bullet3Common/b3TransformUtil.h \
	Bullet3Common/b3Vector3.cpp \
	Bullet3Common/b3Vector3.h \
	Bullet3Common/shared/b3Float4.h \
	Bullet3Common/shared/b3Int2.h \
	Bullet3Common/shared/b3Int4.h \
	Bullet3Common/shared/b3Mat3x3.h \
	Bullet3Common/shared/b3PlatformDefinitions.h \
	Bullet3Common/shared/b3Quat.h \
	$(NULL)

bullet_sources += \
	Bullet3Dynamics/b3CpuRigidBodyPipeline.cpp \
	Bullet3Dynamics/b3CpuRigidBodyPipeline.h \
	Bullet3Dynamics/ConstraintSolver/b3ContactSolverInfo.h \
	Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.cpp \
	Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.h \
	Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.cpp \
	Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.h \
	Bullet3Dynamics/ConstraintSolver/b3JacobianEntry.h \
	Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.cpp \
	Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.h \
	Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.cpp \
	Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.h \
	Bullet3Dynamics/ConstraintSolver/b3SolverBody.h \
	Bullet3Dynamics/ConstraintSolver/b3SolverConstraint.h \
	Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.cpp \
	Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.h \
	Bullet3Dynamics/shared/b3ContactConstraint4.h \
	Bullet3Dynamics/shared/b3ConvertConstraint4.h \
	Bullet3Dynamics/shared/b3Inertia.h \
	Bullet3Dynamics/shared/b3IntegrateTransforms.h \
	$(NULL)

bullet_sources += \
	Bullet3Geometry/b3AabbUtil.h \
	Bullet3Geometry/b3ConvexHullComputer.cpp \
	Bullet3Geometry/b3ConvexHullComputer.h \
	Bullet3Geometry/b3GeometryUtil.cpp \
	Bullet3Geometry/b3GeometryUtil.h \
	Bullet3Geometry/b3GrahamScan2dConvexHull.h \
	$(NULL)

bullet_sources += \
	Bullet3OpenCL/BroadphaseCollision/b3GpuBroadphaseInterface.h \
	Bullet3OpenCL/BroadphaseCollision/b3GpuGridBroadphase.cpp \
	Bullet3OpenCL/BroadphaseCollision/b3GpuGridBroadphase.h \
	Bullet3OpenCL/BroadphaseCollision/b3GpuParallelLinearBvhBroadphase.cpp \
	Bullet3OpenCL/BroadphaseCollision/b3GpuParallelLinearBvhBroadphase.h \
	Bullet3OpenCL/BroadphaseCollision/b3GpuParallelLinearBvh.cpp \
	Bullet3OpenCL/BroadphaseCollision/b3GpuParallelLinearBvh.h \
	Bullet3OpenCL/BroadphaseCollision/b3GpuSapBroadphase.cpp \
	Bullet3OpenCL/BroadphaseCollision/b3GpuSapBroadphase.h \
	Bullet3OpenCL/BroadphaseCollision/b3SapAabb.h \
	Bullet3OpenCL/BroadphaseCollision/kernels/gridBroadphase.cl \
	Bullet3OpenCL/BroadphaseCollision/kernels/gridBroadphaseKernels.h \
	Bullet3OpenCL/BroadphaseCollision/kernels/parallelLinearBvh.cl \
	Bullet3OpenCL/BroadphaseCollision/kernels/parallelLinearBvhKernels.h \
	Bullet3OpenCL/BroadphaseCollision/kernels/sap.cl \
	Bullet3OpenCL/BroadphaseCollision/kernels/sapKernels.h \
	Bullet3OpenCL/Initialize/b3OpenCLInclude.h \
	Bullet3OpenCL/Initialize/b3OpenCLUtils.cpp \
	Bullet3OpenCL/Initialize/b3OpenCLUtils.h \
	Bullet3OpenCL/NarrowphaseCollision/b3BvhInfo.h \
	Bullet3OpenCL/NarrowphaseCollision/b3ContactCache.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3ContactCache.h \
	Bullet3OpenCL/NarrowphaseCollision/b3ConvexHullContact.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3ConvexHullContact.h \
	Bullet3OpenCL/NarrowphaseCollision/b3ConvexPolyhedronCL.h \
	Bullet3OpenCL/NarrowphaseCollision/b3GjkEpa.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3GjkEpa.h \
	Bullet3OpenCL/NarrowphaseCollision/b3GjkPairDetector.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3GjkPairDetector.h \
	Bullet3OpenCL/NarrowphaseCollision/b3OptimizedBvh.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3OptimizedBvh.h \
	Bullet3OpenCL/NarrowphaseCollision/b3QuantizedBvh.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3QuantizedBvh.h \
	Bullet3OpenCL/NarrowphaseCollision/b3StridingMeshInterface.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3StridingMeshInterface.h \
	Bullet3OpenCL/NarrowphaseCollision/b3SupportMappings.h \
	Bullet3OpenCL/NarrowphaseCollision/b3TriangleCallback.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3TriangleCallback.h \
	Bullet3OpenCL/NarrowphaseCollision/b3TriangleIndexVertexArray.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3TriangleIndexVertexArray.h \
	Bullet3OpenCL/NarrowphaseCollision/b3VectorFloat4.h \
	Bullet3OpenCL/NarrowphaseCollision/b3VoronoiSimplexSolver.cpp \
	Bullet3OpenCL/NarrowphaseCollision/b3VoronoiSimplexSolver.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/bvhTraversal.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/bvhTraversal.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/mpr.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/mprKernels.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/primitiveContacts.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/primitiveContacts.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/sat.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/satClipHullContacts.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/satClipHullContacts.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/satConcave.cl \
	Bullet3OpenCL/NarrowphaseCollision/kernels/satConcaveKernels.h \
	Bullet3OpenCL/NarrowphaseCollision/kernels/satKernels.h \
	Bullet3OpenCL/ParallelPrimitives/b3BoundSearchCL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3BoundSearchCL.h \
	Bullet3OpenCL/ParallelPrimitives/b3BufferInfoCL.h \
	Bullet3OpenCL/ParallelPrimitives/b3FillCL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3FillCL.h \
	Bullet3OpenCL/ParallelPrimitives/b3LauncherCL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3LauncherCL.h \
	Bullet3OpenCL/ParallelPrimitives/b3OpenCLArray.h \
	Bullet3OpenCL/ParallelPrimitives/b3PrefixScanCL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3PrefixScanCL.h \
	Bullet3OpenCL/ParallelPrimitives/b3PrefixScanFloat4CL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3PrefixScanFloat4CL.h \
	Bullet3OpenCL/ParallelPrimitives/b3RadixSort32CL.cpp \
	Bullet3OpenCL/ParallelPrimitives/b3RadixSort32CL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/BoundSearchKernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/BoundSearchKernelsCL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/CopyKernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/CopyKernelsCL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/FillKernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/FillKernelsCL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/PrefixScanFloat4Kernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/PrefixScanKernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/PrefixScanKernelsCL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/PrefixScanKernelsFloat4CL.h \
	Bullet3OpenCL/ParallelPrimitives/kernels/RadixSort32Kernels.cl \
	Bullet3OpenCL/ParallelPrimitives/kernels/RadixSort32KernelsCL.h \
	Bullet3OpenCL/Raycast/b3GpuRaycast.cpp \
	Bullet3OpenCL/Raycast/b3GpuRaycast.h \
	Bullet3OpenCL/Raycast/kernels/rayCastKernels.cl \
	Bullet3OpenCL/Raycast/kernels/rayCastKernels.h \
	Bullet3OpenCL/RigidBody/b3GpuConstraint4.h \
	Bullet3OpenCL/RigidBody/b3GpuGenericConstraint.cpp \
	Bullet3OpenCL/RigidBody/b3GpuGenericConstraint.h \
	Bullet3OpenCL/RigidBody/b3GpuJacobiContactSolver.cpp \
	Bullet3OpenCL/RigidBody/b3GpuJacobiContactSolver.h \
	Bullet3OpenCL/RigidBody/b3GpuNarrowPhase.cpp \
	Bullet3OpenCL/RigidBody/b3GpuNarrowPhase.h \
	Bullet3OpenCL/RigidBody/b3GpuNarrowPhaseInternalData.h \
	Bullet3OpenCL/RigidBody/b3GpuPgsConstraintSolver.cpp \
	Bullet3OpenCL/RigidBody/b3GpuPgsConstraintSolver.h \
	Bullet3OpenCL/RigidBody/b3GpuPgsContactSolver.cpp \
	Bullet3OpenCL/RigidBody/b3GpuPgsContactSolver.h \
	Bullet3OpenCL/RigidBody/b3GpuRigidBodyPipeline.cpp \
	Bullet3OpenCL/RigidBody/b3GpuRigidBodyPipeline.h \
	Bullet3OpenCL/RigidBody/b3GpuRigidBodyPipelineInternalData.h \
	Bullet3OpenCL/RigidBody/b3GpuSolverBody.h \
	Bullet3OpenCL/RigidBody/b3GpuSolverConstraint.h \
	Bullet3OpenCL/RigidBody/b3Solver.cpp \
	Bullet3OpenCL/RigidBody/b3Solver.h \
	Bullet3OpenCL/RigidBody/kernels/batchingKernels.cl \
	Bullet3OpenCL/RigidBody/kernels/batchingKernels.h \
	Bullet3OpenCL/RigidBody/kernels/batchingKernelsNew.cl \
	Bullet3OpenCL/RigidBody/kernels/batchingKernelsNew.h \
	Bullet3OpenCL/RigidBody/kernels/integrateKernel.cl \
	Bullet3OpenCL/RigidBody/kernels/integrateKernel.h \
	Bullet3OpenCL/RigidBody/kernels/jointSolver.cl \
	Bullet3OpenCL/RigidBody/kernels/jointSolver.h \
	Bullet3OpenCL/RigidBody/kernels/solveContact.cl \
	Bullet3OpenCL/RigidBody/kernels/solveContact.h \
	Bullet3OpenCL/RigidBody/kernels/solveFriction.cl \
	Bullet3OpenCL/RigidBody/kernels/solveFriction.h \
	Bullet3OpenCL/RigidBody/kernels/solverSetup2.cl \
	Bullet3OpenCL/RigidBody/kernels/solverSetup2.h \
	Bullet3OpenCL/RigidBody/kernels/solverSetup.cl \
	Bullet3OpenCL/RigidBody/kernels/solverSetup.h \
	Bullet3OpenCL/RigidBody/kernels/solverUtils.cl \
	Bullet3OpenCL/RigidBody/kernels/solverUtils.h \
	Bullet3OpenCL/RigidBody/kernels/updateAabbsKernel.cl \
	Bullet3OpenCL/RigidBody/kernels/updateAabbsKernel.h \
	$(NULL)

bullet_sources += \
	Bullet3Serialize/Bullet2FileLoader/autogenerated/bullet2.h \
	Bullet3Serialize/Bullet2FileLoader/b3BulletFile.cpp \
	Bullet3Serialize/Bullet2FileLoader/b3BulletFile.h \
	Bullet3Serialize/Bullet2FileLoader/b3Chunk.cpp \
	Bullet3Serialize/Bullet2FileLoader/b3Chunk.h \
	Bullet3Serialize/Bullet2FileLoader/b3Common.h \
	Bullet3Serialize/Bullet2FileLoader/b3Defines.h \
	Bullet3Serialize/Bullet2FileLoader/b3DNA.cpp \
	Bullet3Serialize/Bullet2FileLoader/b3DNA.h \
	Bullet3Serialize/Bullet2FileLoader/b3File.cpp \
	Bullet3Serialize/Bullet2FileLoader/b3File.h \
	Bullet3Serialize/Bullet2FileLoader/b3Serializer.cpp \
	Bullet3Serialize/Bullet2FileLoader/b3Serializer.h \
	$(NULL)

bullet_sources += \
	BulletCollision/BroadphaseCollision/btAxisSweep3.cpp \
	BulletCollision/BroadphaseCollision/btAxisSweep3.h \
	BulletCollision/BroadphaseCollision/btBroadphaseInterface.h \
	BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp \
	BulletCollision/BroadphaseCollision/btBroadphaseProxy.h \
	BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp \
	BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h \
	BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp \
	BulletCollision/BroadphaseCollision/btDbvtBroadphase.h \
	BulletCollision/BroadphaseCollision/btDbvt.cpp \
	BulletCollision/BroadphaseCollision/btDbvt.h \
	BulletCollision/BroadphaseCollision/btDispatcher.cpp \
	BulletCollision/BroadphaseCollision/btDispatcher.h \
	BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp \
	BulletCollision/BroadphaseCollision/btMultiSapBroadphase.h \
	BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp \
	BulletCollision/BroadphaseCollision/btOverlappingPairCache.h \
	BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h \
	BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp \
	BulletCollision/BroadphaseCollision/btQuantizedBvh.h \
	BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp \
	BulletCollision/BroadphaseCollision/btSimpleBroadphase.h \
	BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp \
	BulletCollision/CollisionDispatch/btBoxBoxDetector.h \
	BulletCollision/CollisionDispatch/btCollisionConfiguration.h \
	BulletCollision/CollisionDispatch/btCollisionCreateFunc.h \
	BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp \
	BulletCollision/CollisionDispatch/btCollisionDispatcher.h \
	BulletCollision/CollisionDispatch/btCollisionObject.cpp \
	BulletCollision/CollisionDispatch/btCollisionObject.h \
	BulletCollision/CollisionDispatch/btCollisionObjectWrapper.h \
	BulletCollision/CollisionDispatch/btCollisionWorld.cpp \
	BulletCollision/CollisionDispatch/btCollisionWorld.h \
	BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp \
	BulletCollision/CollisionDispatch/btCollisionWorldImporter.h \
	BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h \
	BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h \
	BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp \
	BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h \
	BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btGhostObject.cpp \
	BulletCollision/CollisionDispatch/btGhostObject.h \
	BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp \
	BulletCollision/CollisionDispatch/btHashedSimplePairCache.h \
	BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp \
	BulletCollision/CollisionDispatch/btInternalEdgeUtility.h \
	BulletCollision/CollisionDispatch/btManifoldResult.cpp \
	BulletCollision/CollisionDispatch/btManifoldResult.h \
	BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp \
	BulletCollision/CollisionDispatch/btSimulationIslandManager.h \
	BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp \
	BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h \
	BulletCollision/CollisionDispatch/btUnionFind.cpp \
	BulletCollision/CollisionDispatch/btUnionFind.h \
	BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp \
	BulletCollision/CollisionDispatch/SphereTriangleDetector.h \
	BulletCollision/CollisionShapes/btBox2dShape.cpp \
	BulletCollision/CollisionShapes/btBox2dShape.h \
	BulletCollision/CollisionShapes/btBoxShape.cpp \
	BulletCollision/CollisionShapes/btBoxShape.h \
	BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp \
	BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h \
	BulletCollision/CollisionShapes/btCapsuleShape.cpp \
	BulletCollision/CollisionShapes/btCapsuleShape.h \
	BulletCollision/CollisionShapes/btCollisionMargin.h \
	BulletCollision/CollisionShapes/btCollisionShape.cpp \
	BulletCollision/CollisionShapes/btCollisionShape.h \
	BulletCollision/CollisionShapes/btCompoundShape.cpp \
	BulletCollision/CollisionShapes/btCompoundShape.h \
	BulletCollision/CollisionShapes/btConcaveShape.cpp \
	BulletCollision/CollisionShapes/btConcaveShape.h \
	BulletCollision/CollisionShapes/btConeShape.cpp \
	BulletCollision/CollisionShapes/btConeShape.h \
	BulletCollision/CollisionShapes/btConvex2dShape.cpp \
	BulletCollision/CollisionShapes/btConvex2dShape.h \
	BulletCollision/CollisionShapes/btConvexHullShape.cpp \
	BulletCollision/CollisionShapes/btConvexHullShape.h \
	BulletCollision/CollisionShapes/btConvexInternalShape.cpp \
	BulletCollision/CollisionShapes/btConvexInternalShape.h \
	BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp \
	BulletCollision/CollisionShapes/btConvexPointCloudShape.h \
	BulletCollision/CollisionShapes/btConvexPolyhedron.cpp \
	BulletCollision/CollisionShapes/btConvexPolyhedron.h \
	BulletCollision/CollisionShapes/btConvexShape.cpp \
	BulletCollision/CollisionShapes/btConvexShape.h \
	BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp \
	BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h \
	BulletCollision/CollisionShapes/btCylinderShape.cpp \
	BulletCollision/CollisionShapes/btCylinderShape.h \
	BulletCollision/CollisionShapes/btEmptyShape.cpp \
	BulletCollision/CollisionShapes/btEmptyShape.h \
	BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp \
	BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h \
	BulletCollision/CollisionShapes/btMaterial.h \
	BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp \
	BulletCollision/CollisionShapes/btMinkowskiSumShape.h \
	BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp \
	BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h \
	BulletCollision/CollisionShapes/btMultiSphereShape.cpp \
	BulletCollision/CollisionShapes/btMultiSphereShape.h \
	BulletCollision/CollisionShapes/btOptimizedBvh.cpp \
	BulletCollision/CollisionShapes/btOptimizedBvh.h \
	BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp \
	BulletCollision/CollisionShapes/btPolyhedralConvexShape.h \
	BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp \
	BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h \
	BulletCollision/CollisionShapes/btShapeHull.cpp \
	BulletCollision/CollisionShapes/btShapeHull.h \
	BulletCollision/CollisionShapes/btSphereShape.cpp \
	BulletCollision/CollisionShapes/btSphereShape.h \
	BulletCollision/CollisionShapes/btStaticPlaneShape.cpp \
	BulletCollision/CollisionShapes/btStaticPlaneShape.h \
	BulletCollision/CollisionShapes/btStridingMeshInterface.cpp \
	BulletCollision/CollisionShapes/btStridingMeshInterface.h \
	BulletCollision/CollisionShapes/btTetrahedronShape.cpp \
	BulletCollision/CollisionShapes/btTetrahedronShape.h \
	BulletCollision/CollisionShapes/btTriangleBuffer.cpp \
	BulletCollision/CollisionShapes/btTriangleBuffer.h \
	BulletCollision/CollisionShapes/btTriangleCallback.cpp \
	BulletCollision/CollisionShapes/btTriangleCallback.h \
	BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp \
	BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h \
	BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp \
	BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h \
	BulletCollision/CollisionShapes/btTriangleInfoMap.h \
	BulletCollision/CollisionShapes/btTriangleMesh.cpp \
	BulletCollision/CollisionShapes/btTriangleMesh.h \
	BulletCollision/CollisionShapes/btTriangleMeshShape.cpp \
	BulletCollision/CollisionShapes/btTriangleMeshShape.h \
	BulletCollision/CollisionShapes/btTriangleShape.h \
	BulletCollision/CollisionShapes/btUniformScalingShape.cpp \
	BulletCollision/CollisionShapes/btUniformScalingShape.h \
	BulletCollision/Gimpact/btBoxCollision.h \
	BulletCollision/Gimpact/btClipPolygon.h \
	BulletCollision/Gimpact/btCompoundFromGimpact.h \
	BulletCollision/Gimpact/btContactProcessing.cpp \
	BulletCollision/Gimpact/btContactProcessing.h \
	BulletCollision/Gimpact/btGenericPoolAllocator.cpp \
	BulletCollision/Gimpact/btGenericPoolAllocator.h \
	BulletCollision/Gimpact/btGeometryOperations.h \
	BulletCollision/Gimpact/btGImpactBvh.cpp \
	BulletCollision/Gimpact/btGImpactBvh.h \
	BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp \
	BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h \
	BulletCollision/Gimpact/btGImpactMassUtil.h \
	BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp \
	BulletCollision/Gimpact/btGImpactQuantizedBvh.h \
	BulletCollision/Gimpact/btGImpactShape.cpp \
	BulletCollision/Gimpact/btGImpactShape.h \
	BulletCollision/Gimpact/btQuantization.h \
	BulletCollision/Gimpact/btTriangleShapeEx.cpp \
	BulletCollision/Gimpact/btTriangleShapeEx.h \
	BulletCollision/Gimpact/gim_array.h \
	BulletCollision/Gimpact/gim_basic_geometry_operations.h \
	BulletCollision/Gimpact/gim_bitset.h \
	BulletCollision/Gimpact/gim_box_collision.h \
	BulletCollision/Gimpact/gim_box_set.cpp \
	BulletCollision/Gimpact/gim_box_set.h \
	BulletCollision/Gimpact/gim_clip_polygon.h \
	BulletCollision/Gimpact/gim_contact.cpp \
	BulletCollision/Gimpact/gim_contact.h \
	BulletCollision/Gimpact/gim_geometry.h \
	BulletCollision/Gimpact/gim_geom_types.h \
	BulletCollision/Gimpact/gim_hash_table.h \
	BulletCollision/Gimpact/gim_linear_math.h \
	BulletCollision/Gimpact/gim_math.h \
	BulletCollision/Gimpact/gim_memory.cpp \
	BulletCollision/Gimpact/gim_memory.h \
	BulletCollision/Gimpact/gim_radixsort.h \
	BulletCollision/Gimpact/gim_tri_collision.cpp \
	BulletCollision/Gimpact/gim_tri_collision.h \
	BulletCollision/NarrowPhaseCollision/btComputeGjkEpaPenetration.h \
	BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp \
	BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h \
	BulletCollision/NarrowPhaseCollision/btConvexCast.cpp \
	BulletCollision/NarrowPhaseCollision/btConvexCast.h \
	BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h \
	BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h \
	BulletCollision/NarrowPhaseCollision/btGjkCollisionDescription.h \
	BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp \
	BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h \
	BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp \
	BulletCollision/NarrowPhaseCollision/btGjkEpa2.h \
	BulletCollision/NarrowPhaseCollision/btGjkEpa3.h \
	BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp \
	BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h \
	BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp \
	BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h \
	BulletCollision/NarrowPhaseCollision/btManifoldPoint.h \
	BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp \
	BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h \
	BulletCollision/NarrowPhaseCollision/btMprPenetration.h \
	BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp \
	BulletCollision/NarrowPhaseCollision/btPersistentManifold.h \
	BulletCollision/NarrowPhaseCollision/btPointCollector.h \
	BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp \
	BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h \
	BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp \
	BulletCollision/NarrowPhaseCollision/btRaycastCallback.h \
	BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h \
	BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp \
	BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h \
	BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp \
	BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h \
	$(NULL)

bullet_sources += \
	BulletDynamics/Character/btCharacterControllerInterface.h \
	BulletDynamics/Character/btKinematicCharacterController.cpp \
	BulletDynamics/Character/btKinematicCharacterController.h \
	BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp \
	BulletDynamics/ConstraintSolver/btConeTwistConstraint.h \
	BulletDynamics/ConstraintSolver/btConstraintSolver.h \
	BulletDynamics/ConstraintSolver/btContactConstraint.cpp \
	BulletDynamics/ConstraintSolver/btContactConstraint.h \
	BulletDynamics/ConstraintSolver/btContactSolverInfo.h \
	BulletDynamics/ConstraintSolver/btFixedConstraint.cpp \
	BulletDynamics/ConstraintSolver/btFixedConstraint.h \
	BulletDynamics/ConstraintSolver/btGearConstraint.cpp \
	BulletDynamics/ConstraintSolver/btGearConstraint.h \
	BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp \
	BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h \
	BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp \
	BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.h \
	BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp \
	BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h \
	BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp \
	BulletDynamics/ConstraintSolver/btHinge2Constraint.h \
	BulletDynamics/ConstraintSolver/btHingeConstraint.cpp \
	BulletDynamics/ConstraintSolver/btHingeConstraint.h \
	BulletDynamics/ConstraintSolver/btJacobianEntry.h \
	BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp \
	BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.h \
	BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp \
	BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h \
	BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp \
	BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h \
	BulletDynamics/ConstraintSolver/btSliderConstraint.cpp \
	BulletDynamics/ConstraintSolver/btSliderConstraint.h \
	BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp \
	BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h \
	BulletDynamics/ConstraintSolver/btSolverBody.h \
	BulletDynamics/ConstraintSolver/btSolverConstraint.h \
	BulletDynamics/ConstraintSolver/btTypedConstraint.cpp \
	BulletDynamics/ConstraintSolver/btTypedConstraint.h \
	BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp \
	BulletDynamics/ConstraintSolver/btUniversalConstraint.h \
	BulletDynamics/Dynamics/btActionInterface.h \
	BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp \
	BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h \
	BulletDynamics/Dynamics/btDynamicsWorld.h \
	BulletDynamics/Dynamics/btRigidBody.cpp \
	BulletDynamics/Dynamics/btRigidBody.h \
	BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp \
	BulletDynamics/Dynamics/btSimpleDynamicsWorld.h \
	BulletDynamics/Featherstone/btMultiBodyConstraint.cpp \
	BulletDynamics/Featherstone/btMultiBodyConstraint.h \
	BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp \
	BulletDynamics/Featherstone/btMultiBodyConstraintSolver.h \
	BulletDynamics/Featherstone/btMultiBody.cpp \
	BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp \
	BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.h \
	BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp \
	BulletDynamics/Featherstone/btMultiBodyFixedConstraint.h \
	BulletDynamics/Featherstone/btMultiBody.h \
	BulletDynamics/Featherstone/btMultiBodyJointFeedback.h \
	BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp \
	BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.h \
	BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp \
	BulletDynamics/Featherstone/btMultiBodyJointMotor.h \
	BulletDynamics/Featherstone/btMultiBodyLinkCollider.h \
	BulletDynamics/Featherstone/btMultiBodyLink.h \
	BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp \
	BulletDynamics/Featherstone/btMultiBodyPoint2Point.h \
	BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp \
	BulletDynamics/Featherstone/btMultiBodySliderConstraint.h \
	BulletDynamics/Featherstone/btMultiBodySolverConstraint.h \
	BulletDynamics/MLCPSolvers/btDantzigLCP.cpp \
	BulletDynamics/MLCPSolvers/btDantzigLCP.h \
	BulletDynamics/MLCPSolvers/btDantzigSolver.h \
	BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp \
	BulletDynamics/MLCPSolvers/btLemkeAlgorithm.h \
	BulletDynamics/MLCPSolvers/btLemkeSolver.h \
	BulletDynamics/MLCPSolvers/btMLCPSolver.cpp \
	BulletDynamics/MLCPSolvers/btMLCPSolver.h \
	BulletDynamics/MLCPSolvers/btMLCPSolverInterface.h \
	BulletDynamics/MLCPSolvers/btPATHSolver.h \
	BulletDynamics/MLCPSolvers/btSolveProjectedGaussSeidel.h \
	BulletDynamics/Vehicle/btRaycastVehicle.cpp \
	BulletDynamics/Vehicle/btRaycastVehicle.h \
	BulletDynamics/Vehicle/btVehicleRaycaster.h \
	BulletDynamics/Vehicle/btWheelInfo.cpp \
	BulletDynamics/Vehicle/btWheelInfo.h \
	$(NULL)

bullet_sources += \
	BulletInverseDynamics/details/IDEigenInterface.hpp \
	BulletInverseDynamics/details/IDLinearMathInterface.hpp \
	BulletInverseDynamics/details/IDMatVec.hpp \
	BulletInverseDynamics/details/MultiBodyTreeImpl.cpp \
	BulletInverseDynamics/details/MultiBodyTreeImpl.hpp \
	BulletInverseDynamics/details/MultiBodyTreeInitCache.cpp \
	BulletInverseDynamics/details/MultiBodyTreeInitCache.hpp \
	BulletInverseDynamics/IDConfigBuiltin.hpp \
	BulletInverseDynamics/IDConfigEigen.hpp \
	BulletInverseDynamics/IDConfig.hpp \
	BulletInverseDynamics/IDErrorMessages.hpp \
	BulletInverseDynamics/IDMath.cpp \
	BulletInverseDynamics/IDMath.hpp \
	BulletInverseDynamics/MultiBodyTree.cpp \
	BulletInverseDynamics/MultiBodyTree.hpp \
	$(NULL)

bullet_sources += \
	BulletSoftBody/btDefaultSoftBodySolver.cpp \
	BulletSoftBody/btDefaultSoftBodySolver.h \
	BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp \
	BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.h \
	BulletSoftBody/btSoftBody.cpp \
	BulletSoftBody/btSoftBodyData.h \
	BulletSoftBody/btSoftBody.h \
	BulletSoftBody/btSoftBodyHelpers.cpp \
	BulletSoftBody/btSoftBodyHelpers.h \
	BulletSoftBody/btSoftBodyInternals.h \
	BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp \
	BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.h \
	BulletSoftBody/btSoftBodySolvers.h \
	BulletSoftBody/btSoftBodySolverVertexBuffer.h \
	BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp \
	BulletSoftBody/btSoftRigidCollisionAlgorithm.h \
	BulletSoftBody/btSoftRigidDynamicsWorld.cpp \
	BulletSoftBody/btSoftRigidDynamicsWorld.h \
	BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp \
	BulletSoftBody/btSoftSoftCollisionAlgorithm.h \
	BulletSoftBody/btSparseSDF.h \
	$(NULL)

bullet_sources += \
	LinearMath/btAabbUtil2.h \
	LinearMath/btAlignedAllocator.cpp \
	LinearMath/btAlignedAllocator.h \
	LinearMath/btAlignedObjectArray.h \
	LinearMath/btConvexHullComputer.cpp \
	LinearMath/btConvexHullComputer.h \
	LinearMath/btConvexHull.cpp \
	LinearMath/btConvexHull.h \
	LinearMath/btCpuFeatureUtility.h \
	LinearMath/btDefaultMotionState.h \
	LinearMath/btGeometryUtil.cpp \
	LinearMath/btGeometryUtil.h \
	LinearMath/btGrahamScan2dConvexHull.h \
	LinearMath/btHashMap.h \
	LinearMath/btIDebugDraw.h \
	LinearMath/btList.h \
	LinearMath/btMatrix3x3.h \
	LinearMath/btMatrixX.h \
	LinearMath/btMinMax.h \
	LinearMath/btMotionState.h \
	LinearMath/btPolarDecomposition.cpp \
	LinearMath/btPolarDecomposition.h \
	LinearMath/btPoolAllocator.h \
	LinearMath/btQuadWord.h \
	LinearMath/btQuaternion.h \
	LinearMath/btQuickprof.cpp \
	LinearMath/btQuickprof.h \
	LinearMath/btRandom.h \
	LinearMath/btScalar.h \
	LinearMath/btSerializer.cpp \
	LinearMath/btSerializer.h \
	LinearMath/btSpatialAlgebra.h \
	LinearMath/btStackAlloc.h \
	LinearMath/btTransform.h \
	LinearMath/btTransformUtil.h \
	LinearMath/btVector3.cpp \
	LinearMath/btVector3.h \
	$(NULL)

bullet_sources += \
	clew/clew.c \
	clew/clew.h \
	$(NULL)

