
include $(top_srcdir)/build/autotools/common.am

EXTRA_DIST = \
    VsLol.csproj \
    \
    VsLol.cs \
    VsLol.vsct \
    VsLol.resx \
    VsLol.Designer.cs \
    Properties/AssemblyInfo.cs \
    GlobalSuppressions.cs \
    MenuGenerateCompilers.cs \
    \
    source.extension.vsixmanifest \
    \
    gear.bmp

